# f1-pitstop-advisor-v2

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
conf/base/: catalog.yml  parameters.yml  parameters_data_ingestion.yml  parameters_generate_strategies.yml
data/03_primary/: top1000Vegas.csv
data/07_reporting/: best_strategies.csv  detailed_simulations.csv  optimization_results.csv
data/07_reporting/strategy_plots/: Austin  Baku  Catalunya  Hungaroring  Imola  Jeddah  Las Vegas  Melbourne  Mexico City  Miami  Monte Carlo  Montreal  Monza  Paul Ricard  Sakhir  Silverstone  Singapore  Spa-Francorchamps  Spielberg  Suzuka  Yas Marina Circuit  Zandvoort
data/parameters/: compounds_map.csv
notebooks/: determine_best_data.ipynb  ex1.ipynb  ex2.ipynb  search_for_best_models.ipynb  search_for_best_parameters.ipynb
src/f1_pitstop_advisor/: __init__.py  __main__.py  data_processing_utils.py  pipeline_registry.py  settings.py
src/f1_pitstop_advisor/pipelines/data_ingestion/: nodes.py  pipeline.py
src/f1_pitstop_advisor/pipelines/feature_engineering/: nodes.py  pipeline.py
src/f1_pitstop_advisor/pipelines/generate_strategies/: __init__.py  nodes.py  pipeline.py
tests/pipelines/generate_strategies/: test_pipeline.py
