[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "f1_pitstop_advisor"
requires-python = ">=3.9"
readme = "README.md"
dynamic = ["version"]

dependencies = [
    "ipython>=8.10",
    "jupyterlab>=4.0",
    "notebook",

    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pyarrow>=14.0",
    "pandera>=0.17",

    "kedro~=1.0.0",
    "kedro-datasets[pandas]>=3.0",

    "wandb>=0.15",
    "pytest>=7.0",
    "pre-commit",
    "ruff",
    "black",
    "nbstripout",

    "fastf1>=3.3"
]

[project.scripts]
f1-pitstop-advisor = "f1_pitstop_advisor.__main__:main"

[tool.kedro]
package_name = "f1_pitstop_advisor"
project_name = "f1-pitstop-advisor"
kedro_init_version = "1.0.0"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "f1_pitstop_advisor.__version__"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro_telemetry]
project_id = "2461c58dede342968cb2aa1c08ae7771"
